# OOP

LW1/: CMakeLists.txt  Makefile  README.md  main.cpp  test_main.cpp  textReplace.cpp  textReplace.h
LW1/include/: textReplace.h
LW1/src/: textReplace.cpp
LW1/tests/: test_main.cpp
LW2/: CMakeLists.txt  CmakeLists.txt  Makefile  README.md  main.cpp
LW2/include/: decimal.h
LW2/src/: decimal.cpp
LW2/tests/: test_main.cpp
LW3/: CMakeLists.txt  Makefile  README.md  main.cpp  my_program
LW3/containers/: vector.cpp  vector.hpp
LW3/include/containers/: vector.h
LW3/include/figures/: figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  point.hpp
LW3/src/containers/: vector.cpp
LW3/src/figures/: figure.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  point.cpp
LW3/tests/: HexagonTest.cpp  OctagonTest.cpp  PentagonTest.cpp  PointTest.cpp  VectorTest.cpp
LW4/: CMakeLists.txt  Makefile  README.md  main.cpp
LW4/containers/: vector.cpp  vector.hpp
LW4/include/figures/: figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  point.hpp
LW4/src/figures/: hexagon.cpp  octagon.cpp  pentagon.cpp  point.cpp
LW4/tests/: HexagonTest.cpp  OctagonTest.cpp  PentagonTest.cpp  PointTest.cpp
LW5/: CMakeLists.txt  Makefile  main.cpp
LW5/include/: allocator.hpp  list.hpp
LW5/tests/: test.cpp  test_forward_list.cpp  test_iterator.cpp
LW6/: CMakeLists.txt  Makefile  main.cpp
LW6/include/: Knight.hpp  SlaveTrader.hpp  npc.hpp  squirrel.hpp
LW6/src/: Knight.cpp  SlaveTrader.cpp  npc.cpp  squirrel.cpp
LW6/test/: tests.cpp
LW7/: CMakeLists.txt  Makefile  log.txt  main.cpp
LW7/include/: Factory.hpp  Knight.hpp  Observer.hpp  SlaveTrader.hpp  Squirrel.hpp  npc.hpp  visitors.hpp
LW7/src/: Knight.cpp  SlaveTrader.cpp  Squirrel.cpp  npc.cpp
LW7/test/: tests.cpp
